Removed paragraph margin gap styles.  They no longer seem to be needed.

--- a/blockbase/assets/ponyfill.css
+++ b/blockbase/assets/ponyfill.css
@@ -219,17 +219,6 @@ body.admin-bar .wp-site-blocks {
 	min-height: calc( 100vh - var(--wpadmin-bar--height));
 }
 
-p.wp-block.wp-block-paragraph,
-*[class^="wp-container"] > * + p,
-p {
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
-
-.wp-block-column :first-child, .wp-block-group :first-child {
-	margin-top: 0;
-}
-
 .image-no-margin {
 	margin: 0;
 }
